# AugLab

./: .gitignore  README.md  pyproject.toml
auglab/: add_trainer.py
auglab/configs/: transform_params.json  transform_params_gpu.json  transform_params_gpu_default01-23_ImageContrastV26_6_2GPUTransform.json  transform_params_hybrid.json  transform_params_hybrid_TAGE.json
auglab/configs/data/: data.json
auglab/trainers/: nnUNetTrainerDAExt.py  nnUNetTrainerTest.py
auglab/transforms/: fromSeg.py  gpu_transforms.py  spatial.py  transforms.py
auglab/transforms/cpu/: transforms.py
auglab/transforms/gpu/: base.py  contrast.py  fromSeg.py  spatial.py  transforms.py
auglab/transforms/synthseg/: README.md  __init__.py  functional.py  generator.py  transforms.py
auglab/utils/: utils.py
scripts/: generate_augmentations.py  train_monai.py
